# kronos

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  VALIDATION.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  deploy-docs.yml  docs-check.yml
cmake/: FindFFTW3.cmake  FindLibXC.cmake  FindSpglib.cmake  MetalShaders.cmake
docs/: api_reference.md  architecture.md  developer_guide.md  physics_notes.md  user_guide.md
docs/architecture/: _category_.json  algorithms.md  component-diagram.md  data-flow.md  gpu-portability.md  observability.md  overview.md  scf-flowchart.md  source-layout.md  unit-conventions.md
docs/physics/: _category_.json  bloch-theorem.md  density-mixing.md  exchange-correlation.md  hartree-potential.md  hellmann-feynman-forces.md  hybrid-functionals.md  kohn-sham-equations.md  numerical-precision.md  plane-wave-basis.md  pseudopotentials.md  rydberg-units.md  smearing.md  stress-tensor.md  symmetry-spglib.md
docs/superpowers/plans/: 2026-05-16-apple-silicon-metal-backend.md
docs/superpowers/specs/: 2026-05-16-apple-silicon-metal-backend-design.md  2026-06-16-kronos-docusaurus-website-design.md
examples/: fe_bcc.yaml  graphene.yaml  h2o_gamma.yaml  mgo_rocksalt.yaml  si_2x2x2_real.yaml  si_bulk.yaml  si_gamma_forces.yaml  si_gamma_real.yaml  si_pbe.yaml  si_qe_exact.yaml  si_qe_gamma.yaml  si_qe_ibrav2.yaml  si_qe_precise.yaml  si_qe_shifted.yaml  si_qe_test_suite.yaml  si_qe_validation.yaml  si_scf_real.yaml
src/: CMakeLists.txt  main.cpp
src/basis/: fft_grid.cpp  fft_grid.hpp  kpoints.cpp  kpoints.hpp  plane_wave.cpp  plane_wave.hpp
src/core/: constants.hpp  crystal.cpp  crystal.hpp  element_data.hpp  spherical_harmonics.cpp  spherical_harmonics.hpp  types.hpp
src/gpu/: blas.hpp  blas_cuda.cu  blas_hip.cpp  blas_metal.cpp  device_buffer.hpp  fft.hpp  fft_cuda.cu  fft_hip.cpp  fft_metal.cpp  gpu_context.hpp  gpu_context_cuda.cu  gpu_context_hip.cpp  gpu_context_metal.cpp  gpu_stubs.cpp  memory.hpp  memory_cuda.cu  memory_hip.cpp  memory_metal.cpp
src/gpu/kernels/: complex_gemm.metal  hamiltonian_kernels.cu  hamiltonian_kernels_hip.cpp
src/hamiltonian/: gpu_hamiltonian.cpp  gpu_hamiltonian.hpp  hamiltonian.cpp  hamiltonian.hpp
src/io/: checkpoint.cpp  checkpoint.hpp  input_parser.cpp  input_parser.hpp  output_writer.cpp  output_writer.hpp  upf_parser.cpp  upf_parser.hpp
src/postprocessing/: band_structure.cpp  band_structure.hpp  dos.cpp  dos.hpp
src/potential/: ewald.cpp  ewald.hpp  exact_exchange.cpp  exact_exchange.hpp  forces.cpp  forces.hpp  gradient.cpp  gradient.hpp  hartree.cpp  hartree.hpp  local_pp.cpp  local_pp.hpp  nonlocal_pp.cpp  nonlocal_pp.hpp  paw.cpp  paw.hpp  stress.cpp  stress.hpp  xc.cpp  xc.hpp
src/solver/: bfgs.cpp  bfgs.hpp  davidson.cpp  davidson.hpp  fermi.cpp  fermi.hpp  mixing.cpp  mixing.hpp  scf.cpp  scf.hpp  vc_relax.cpp  vc_relax.hpp
src/utils/: logger.cpp  logger.hpp  mpi_wrapper.cpp  mpi_wrapper.hpp  radial_integral.hpp  timer.cpp  timer.hpp
test/: CMakeLists.txt  cmake_test_discovery_07b99d589f.json  cmake_test_discovery_1ca650a346.json  cmake_test_discovery_3019152c07.json  cmake_test_discovery_35c35443fd.json  cmake_test_discovery_395e4f53d9.json  cmake_test_discovery_87bb4fa79e.json  cmake_test_discovery_912bcf1d89.json  cmake_test_discovery_952822de6a.json  cmake_test_discovery_a9fac0c799.json  cmake_test_discovery_b4a0caf324.json  cmake_test_discovery_bb4b336218.json  cmake_test_discovery_d4c72ede68.json  cmake_test_discovery_de71b06dfb.json  cmake_test_discovery_f0205b82d5.json  cmake_test_discovery_f5c8acafc1.json  test_basis.cpp  test_checkpoint.cpp  test_convergence.cpp  test_crystal.cpp  test_fft.cpp  test_forces.cpp  test_gpu.cpp  test_gradient.cpp  test_hamiltonian.cpp  test_helpers.hpp  test_hybrid.cpp  test_input.cpp  test_mpi.cpp  test_mpi_multi.cpp  test_output.cpp  test_paw.cpp  test_physics.cpp  test_postprocessing.cpp  test_regression.cpp  test_scf.cpp  test_solvers.cpp  test_stress.cpp  test_unimplemented.cpp  test_upf.cpp  (+3 more)
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/src/components/HomepageFeatures/: index.tsx
website/src/data/: benchmarks.json
website/src/pages/: benchmarks.tsx  index.tsx
